link consultant to user
